# girona500_inspection_trajectories

./: CMakeLists.txt  package.xml
action/: ExecutePlaneInspection.action
cfg/: PlaneInspection.cfg
config/: net_inspection.yaml  plane_inspection.yaml
launch/: plane_inspection.launch
scripts/: plane_inspection_node.py
srv/: PlanInspectionPath.srv
